gh-105812: Make use of the Sphinx `deco` role in documentation, part 1
For the following decorators: `classmethod`, `staticmethod`,
`property`, ABC decorators, enum decorators, `functools.lru_cache`,
`functools.cache`.

--- a/Doc/whatsnew/3.11.rst
+++ b/Doc/whatsnew/3.11.rst
@@ -686,8 +686,8 @@ enum
 * Added the :func:`~enum.member` and :func:`~enum.nonmember` decorators,
   to ensure the decorated object is/is not converted to an enum member.
 
-* Added the :func:`~enum.property` decorator,
-  which works like :func:`property` except for enums.
+* Added the :deco:`~enum.property` decorator,
+  which works like :deco:`property` except for enums.
   Use this instead of :func:`types.DynamicClassAttribute`.
 
 * Added the :func:`~enum.global_enum` enum decorator,
