--- a/Doc/whatsnew/3.8.rst
+++ b/Doc/whatsnew/3.8.rst
@@ -763,7 +763,7 @@ these are the inverse of each class's ``isocalendar`` method.
 functools
 ---------
 
-:func:`functools.lru_cache` can now be used as a straight decorator rather
+:deco:`functools.lru_cache` can now be used as a straight decorator rather
 than as a function returning a decorator.  So both of these are now supported::
 
     @lru_cache
@@ -776,7 +776,7 @@ than as a function returning a decorator.  So both of these are now supported::
 
 (Contributed by Raymond Hettinger in :issue:`36772`.)
 
-Added a new :func:`functools.cached_property` decorator, for computed properties
+Added a new :deco:`functools.cached_property` decorator, for computed properties
 cached for the life of the instance. ::
 
    import functools
@@ -892,7 +892,7 @@ inspect
 The :func:`inspect.getdoc` function can now find docstrings for ``__slots__``
 if that attribute is a :class:`dict` where the values are docstrings.
 This provides documentation options similar to what we already have
-for :func:`property`, :func:`classmethod`, and :func:`staticmethod`::
+for :deco:`property`, :deco:`classmethod`, and :deco:`staticmethod`::
 
   class AudioClip:
       __slots__ = {'bit_rate': 'expressed in kilohertz to one decimal place',
