--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -112,7 +112,7 @@ difflib
 http.server
 -----------
 
-* Added a new ``response_headers=`` keyword argument to
+* Added a new ``response_headers`` keyword argument to
   :class:`SimpleHTTPRequestHandler` to support custom headers in HTTP responses.
   (Contributed by Anton I. Sipos in :gh:`135057`.)
 
