--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-09-03-06-19.gh-issue-139809.lzHJNu.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-09-03-06-19.gh-issue-139809.lzHJNu.rst
@@ -1,1 +1,1 @@
-Decolor subparser ``prog`` in :meth:`argparse.ArgumentParser.add_subparsers` to respect color environment variable changes after parser creation.
+Prevent premature colorization of subparser ``prog`` in :meth:`argparse.ArgumentParser.add_subparsers` to respect color environment variable changes after parser creation.
